# outreach

./: .env.example  .gitignore  PROSPECTING_RUNBOOK.md  enrich_decision_makers.py  lightfield_parallel_prospect_automation_design.md  master_merged_agents_contacts.csv  master_merged_agents_contacts_company_summary_email.csv  master_merged_agents_contacts_crm_import.csv  modal_app.py  prospect_engine_manual.md  prospecting_lists.example.json  prospecting_lists.ny_placement_agents.json  prospecting_lists.private_equity_europe_london.json  pyproject.toml  summary_final.md
automation/: __init__.py  config.py  db.py  main.py  utils.py
automation/api/: __init__.py  webhooks.py
automation/clients/: __init__.py  lightfield_client.py  parallel_monitor_client.py  parallel_research_client.py  parallel_task_client.py
automation/jobs/: __init__.py  discover.py  seed_backfill.py
automation/models/: __init__.py  crm_sync.py  events.py  prospect.py  prospecting.py
automation/services/: __init__.py  enrichment_service.py  lightfield_sync_service.py  prospecting_workflow_service.py  scoring_service.py
experimental-mvv/: .gitignore  README.md  aggregate_trucking_findall.py
