[project]
name = "lightfield-parallel-prospect-engine"
version = "0.1.0"
description = "Lightweight Parallel-first prospect discovery and Lightfield sync automation."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "modal>=1.0.0",
  "parallel-web>=0.5.1",
  "pydantic>=2.9.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
prospect-engine = "automation.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation"]
